@@ -1,3 +1,9 @@
+Overview of changes in Glib::Object::Introspection 0.019
+========================================================
+
+* Fix spelling of two internal functions
+* Fix off-by-one error in internal string comparison
+
 Overview of changes in Glib::Object::Introspection 0.018
 ========================================================
 
